// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonSecondary when asked to render disabled renders disabled 1`] = `
<button
  aria-label="Test button label"
  className="bg-primary-100 text-lg font-bold rounded-xl hover:bg-primary-300/20 active:bg-primary-300/50 disabled:bg-neutral-light-100 disabled:dark:bg-neutral-dark-100 disabled:text-white/40 disabled:cursor-not-allowed focus-visible:ring-4 focus-visible:ring-focus focus:outline-none focus-visible:outline-none some-class"
  data-test-id="test-button"
  disabled={true}
  id="test-button"
  type="button"
>
  Test Button
</button>
`;

exports[`ButtonSecondary when asked to render with additional class renders with additional class 1`] = `
<button
  aria-label="Test button label"
  className="bg-primary-100 text-lg font-bold rounded-xl hover:bg-primary-300/20 active:bg-primary-300/50 disabled:bg-neutral-light-100 disabled:dark:bg-neutral-dark-100 disabled:text-white/40 disabled:cursor-not-allowed focus-visible:ring-4 focus-visible:ring-focus focus:outline-none focus-visible:outline-none some-class"
  data-test-id="test-button"
  id="test-button"
  type="button"
>
  Test Button
</button>
`;

exports[`ButtonSecondary when asked to render with children renders with children 1`] = `
<button
  aria-label="Test button label"
  className="bg-primary-100 text-lg font-bold rounded-xl hover:bg-primary-300/20 active:bg-primary-300/50 disabled:bg-neutral-light-100 disabled:dark:bg-neutral-dark-100 disabled:text-white/40 disabled:cursor-not-allowed focus-visible:ring-4 focus-visible:ring-focus focus:outline-none focus-visible:outline-none"
  data-test-id="test-button"
  id="test-button"
  type="button"
>
  Test Button
</button>
`;
